# github-watch

./: README.md  db.json  pyproject.toml
.github/workflows/: run.yml
github_watch/: cli.py  db.py  utils.py
tests/: test.json  test_cli.py
