[tool.poetry]
name = "github-watch"
version = "0.1.0"
description = ""
authors = ["wytamma <wytamma.wirth@me.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
github-watch = "github_watch.cli:app"

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
typer = {extras = ["all"], version = "^0.6.1"}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
